Archive2/ba/5abf7e925dc580/output
main.cpp: In function 'const int& foo(const int&)':
main.cpp:4:17: error: 'rand' was not declared in this scope
     return rand()%2?  passed_in : globalstuff;
                 ^
main.cpp: In function 'int main()':
main.cpp:8:16: error: unused variable 'uhoh' [-Werror=unused-variable]
     int const& uhoh = foo(5); // to extend or not to extend - that is the HALTING problem
                ^
main.cpp: In function 'const int& foo(const int&)':
main.cpp:5:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1plus: all warnings being treated as errors
